--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body class="align">
         <div class="grid">
-            <form method="post" class="form login">
+            <form method="get" class="form login">
                 <div class="form__field">
                     <label for="login__username">
                         <svg class="icon">
